--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.7",
+    "bootstrap": "^5.3.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.6.0"
+    "react-hot-toast": "^2.5.2",
+    "react-router": "^7.6.0",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -26,7 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7",
+    "sass": "^1.89.0",
     "vite": "^6.3.5"
   }
 }
