--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.8",
     "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
